# libhellonative

./: .gitignore  .gitmodules  CMakeLists.txt
src/java/: LibXJNI.cpp  LibXJNI.h  _generate_h.ps1
src/java/core/src/: LibXJNI.java
src/python/: _build.ps1  boost-build.jam  lib_py.cpp  lib_py.h
src/src/: library.cpp  library.h
